# custom-git

./: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  ast  ast.c  ast.cpp  ast.h  compile.sh  debug_file.txt  fairy_tale.txt  git-aicommit  git-lazydiff  gittest.patch  hierarchal.cpp  hierarchal.h  http_request  http_request.cpp  https_api  https_api.cpp  https_api.h  install.sh  kmeans.h  main.cpp  new_story.txt  openai_api  openai_api.cpp  openai_api.h  package-lock.json  package.json  parsethis.py  simple_test.txt  test  test.cpp  test.go  test.java  test.js  test.md  test.ts  (+1 more)
Formula/: custom-git.rb
commands/aicommit/: CMakeLists.txt  git-aicommit
commands/aicommit/src/: ast.cpp  ast.h  hierarchal.cpp  https_api.cpp  https_api.h  kmeans.cpp  main.cpp  openai_api.cpp  openai_api.h  utils.cpp
commands/gcommit/: .clangd  CMakeLists.txt  git-gcommit  nlp.txt  out.txt  test.diff  test.json
commands/gcommit/src/: ast.cpp  ast.hpp  chunker.cpp  chunker.hpp  hdbscan.cpp  hdbscan.hpp  hierarchal.cpp  hierarchal.hpp  https_api.cpp  https_api.hpp  kmeans.cpp  kmeans.hpp  main.cpp  openai_api.cpp  openai_api.hpp  test.cpp  umap.hpp  utils.cpp  utils.hpp
commands/gcommit/term-ui/: readme.md
commands/gcommit/term-ui/source/: app.tsx  cli.tsx  types.ts
commands/gcommit/term-ui/source/components/: ClusterLegend.tsx  ScatterPlot.tsx  StatusBar.tsx
commands/gcommit/term-ui/source/contexts/: GitContext.tsx
commands/gcommit/terminal-ui/: build.js  package-lock.json  package.json
commands/gcommit/terminal-ui/source/: app.tsx  cli.tsx  types.ts
commands/gcommit/terminal-ui/source/components/: DiffViewer.tsx  FileTree.tsx
commands/gcommit/terminal-ui/source/contexts/: GitContext.tsx
commands/gcommit/terminal-ui/source/utils/: diffUtils.ts
commands/mcommit/: CMakeLists.txt  git-mcommit
commands/mcommit/src/: main.cpp
scripts/: build_all.sh  install.sh  setup.sh  uninstall.sh
shared/: CMakeLists.txt  ast.cpp  ast.hpp  async_https_api.cpp  async_https_api.hpp  async_openai_api.cpp  async_openai_api.hpp  compile_commands.json  diffreader.cpp  diffreader.hpp  https_api.hpp  openai_api.cpp  openai_api.hpp  utils.cpp  utils.hpp
shared/tests/: CMakeLists.txt  async_https_api_test.cpp  async_openai_api_test.cpp  diffreader_test.cpp  hierarchal_test.cpp
shared/tests/fixtures/: sample.diff
